<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname" />
                <EditText
                    android:id="@+id/etFname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="رضا"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/TextViewLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname" />
                <EditText
                    android:id="@+id/etLname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="هاشمی"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/TextViewAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brithday" />
                <EditText
                    android:id="@+id/etBrithday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:maxLength="10"
                    android:text="1366/03/05" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/TextViewEducation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education" />
                <Spinner
                    android:id="@+id/spEdudation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/TextViewExpertise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Expertise" />
                <ExpandableListView
                    android:id="@+id/evExpertise"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1">
                </ExpandableListView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/tvCodeMoaref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CodeMoaref" />
                <EditText
                    android:id="@+id/etCodeMoaref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:gravity="center">
                <Button
                    android:id="@+id/btnSendInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Send" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>