<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_body"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@drawable/background_actionbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/PerFactor" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout_job_title"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/appbar">
        <TextView
            android:id="@+id/tvStepJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:text="@string/PerFactor"/>
    </LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/linearLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout_job_body"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tvTitleStepJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleStep"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SpTitleStepJob"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tvUnitPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UnitPrice"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tvUnitValuePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:inputType="numberDecimal"
                android:layout_gravity="center"
                android:gravity="center"/>
            <EditText
                android:id="@+id/EtUnitValuePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerTotalSumStep">
            <TextView
                android:id="@+id/tvTotalSumStepTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvTotalSumStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tvCheckTitleTool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CheckTitleTool"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CheckTitleTools"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerTitleTools">
            <TextView
                android:id="@+id/tvTitleTools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TitleTools"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SPTitleTools"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerBrand">
            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Brand" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerPriceTool">
            <TextView
                android:id="@+id/tvPriceToolsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/PriceTools" />
            <TextView
                android:id="@+id/tvPriceTools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerValueTools">
            <TextView
                android:id="@+id/tvToolValuePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                android:inputType="numberDecimal"
                android:layout_gravity="center"
                android:gravity="center"/>
            <EditText
                android:id="@+id/EtToolValuePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerTotalSumTool">
            <TextView
                android:id="@+id/tvTotalSumToolTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tvTotalSumTool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerDescription">
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:inputType="number"
                android:layout_gravity="center"
                android:gravity="center"/>
            <EditText
                android:id="@+id/EtDescription"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text|textMultiLine"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnSaveTool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/Add"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnSendPerFactor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:layout_marginLeft="90dp"
                android:text="@string/FinalSave"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/LinerListTools">
            <ListView
                android:id="@+id/ListTools"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_actionbar" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/BottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>