<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_body"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@drawable/background_actionbar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/StepJob" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout_job_title"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/appbar">
        <TextView
            android:id="@+id/tvStepJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:text="@string/StepJob"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_layout_job_body"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ServiceName"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvtitleServiDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ServiDetailName"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ServiDetailName"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvtitleStepServise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servicename"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/EttitleStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvtitleStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleStep"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>
        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp">-->
        <!--<EditText-->
        <!--android:id="@+id/EtPriceJob"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/rounded_edittext"-->
        <!--android:layout_weight="1"/>-->
        <!--<TextView-->
        <!--android:id="@+id/tvPriceJob"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/PriceJob"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"/>-->
        <!--</LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/SpUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/EtUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tvUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UnitPrice"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnSaveStepJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/Add"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnSendStepJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/FinalSave"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ListViewSaveSetp">

            </ListView>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_actionbar" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/BottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>